--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepublishOnly": "yarn test && yarn prod",
     "test:base": "node_modules/mocha/bin/mocha --require babel-core/register",
     "test": "yarn test:base \"test/**/*.js\"",
-    "test:bail": "yarn test --bail"
+    "test:bail": "yarn test --bail",
+    "build": "yarn prod",
+    "start": "serve"
   },
   "author": "Firework Web & Mobile",
   "license": "MIT",
@@ -30,7 +32,8 @@
     "chai": "^4.1.2",
     "eslint": "^5.4.0",
     "laravel-mix": "^2.1.14",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "serve": "^10.0.0"
   },
   "dependencies": {}
 }
