--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
     "codecov": "^3.5.0",
     "eslint": "^6.1.0",
