--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-class-properties"
   ]
 }
