--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "chai": "^4.2.0",
     "codecov": "^3.5.0",
     "eslint": "^6.3.0",
-    "laravel-mix": "^4.1.3",
+    "laravel-mix": "4.1.2",
     "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "vue-template-compiler": "^2.6.10"
