Add cross-env for windows support

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "dist/index.js",
   "scripts": {
     "webpack:base": "node_modules/webpack/bin/webpack.js --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "dev:base": "NODE_ENV=development yarn webpack:base",
+    "dev:base": "cross-env NODE_ENV=development yarn webpack:base",
     "dev": "yarn dev:base --progress",
     "watch": "yarn dev --watch",
-    "prod": "NODE_ENV=production yarn webpack:base",
+    "prod": "cross-env NODE_ENV=production yarn webpack:base",
     "lint": "eslint --ext js .",
     "lint:fix": "yarn lint --fix",
     "prepublishOnly": "yarn test && yarn prod",
@@ -37,6 +37,7 @@
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "codecov": "^3.6.5",
+    "cross-env": "^7.0.2",
     "eslint": "^7.0.0",
     "laravel-mix": "^5.0.4",
     "mocha": "^7.1.2",
