--- a/.github/workflows/build-lint.yml
+++ b/.github/workflows/build-lint.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest, ubuntu-latest]
+        os: [ubuntu-latest]
         node: [10, 12, 14]
 
     name: Node ${{ matrix.node }} on ${{ matrix.os }}
